--- a/src/data/apps.json
+++ b/src/data/apps.json
@@ -67,7 +67,7 @@
     "features": ["ai-native", "modern-ui", "code-generation", "chat"],
     "status": "alive",
     "icon": "kiro.svg",
-    "whiteFilter": true
+    "whiteFilter": false
   },
   {
     "id": "pear",
@@ -595,6 +595,19 @@
     "whiteFilter": false
   },
   {
+    "id": "rayban-meta",
+    "name": "Ray-Ban Meta Glasses",
+    "description": "Smart glasses with Meta AI integration for hands-free AI assistance, photo/video capture, and voice commands.",
+    "category": "physical",
+    "platform": ["hardware"],
+    "website": "https://www.meta.com/ai-glasses/ray-ban-meta/",
+    "pricing": "paid",
+    "features": ["wearable", "meta-ai", "camera", "voice", "glasses"],
+    "status": "alive",
+    "icon": "meta-color.svg",
+    "whiteFilter": false
+  },
+  {
     "id": "devin",
     "name": "Devin",
     "description": "Cognition's autonomous AI software engineer.",
@@ -611,7 +624,7 @@
     "id": "v0",
     "name": "v0",
     "description": "Vercel's AI-powered UI generation and design tool.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://v0.app",
     "pricing": "freemium",
@@ -624,7 +637,7 @@
     "id": "lovable",
     "name": "Lovable",
     "description": "AI app builder for creating full-stack applications.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://lovable.dev",
     "pricing": "freemium",
@@ -637,7 +650,7 @@
     "id": "bolt",
     "name": "Bolt",
     "description": "StackBlitz's AI-powered full-stack app builder.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://bolt.new",
     "pricing": "freemium",
@@ -650,7 +663,7 @@
     "id": "replit-agent",
     "name": "Replit Agent",
     "description": "AI agent that can build and deploy apps on Replit.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://replit.com",
     "pricing": "freemium",
@@ -676,7 +689,7 @@
     "id": "factory",
     "name": "Factory",
     "description": "AI-powered software development automation platform.",
-    "category": "agent",
+    "category": "cli",
     "platform": ["web"],
     "website": "https://factory.ai",
     "pricing": "enterprise",
@@ -739,7 +752,7 @@
     "id": "phoenix",
     "name": "Phoenix",
     "description": "AI-powered app development with instant deployment.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://phoenix.new",
     "pricing": "freemium",
@@ -809,7 +822,7 @@
     "id": "create-xyz",
     "name": "Create.xyz",
     "description": "AI-powered app creation platform.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://www.create.xyz",
     "pricing": "freemium",
@@ -822,7 +835,7 @@
     "id": "softgen",
     "name": "Softgen",
     "description": "AI software generation platform for rapid development.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://softgen.ai",
     "pricing": "freemium",
@@ -866,7 +879,7 @@
     "id": "heroui-chat",
     "name": "HeroUI Chat",
     "description": "AI-powered UI component generation through chat.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://heroui.chat",
     "pricing": "freemium",
@@ -877,7 +890,7 @@
     "id": "rocket",
     "name": "Rocket",
     "description": "AI-powered rapid application development.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://www.rocket.new",
     "pricing": "freemium",
@@ -890,7 +903,7 @@
     "id": "superdesign",
     "name": "Superdesign",
     "description": "AI-powered design and development platform.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://app.superdesign.dev",
     "pricing": "freemium",
@@ -929,7 +942,7 @@
     "id": "atoms",
     "name": "Atoms",
     "description": "AI-powered component library and design system builder.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://atoms.dev",
     "pricing": "freemium",
@@ -995,7 +1008,7 @@
     "id": "capacity",
     "name": "Capacity",
     "description": "AI-powered platform for building full-stack web apps with a spec-first approach and multi-model support.",
-    "category": "agent",
+    "category": "web-builder",
     "platform": ["web"],
     "website": "https://capacity.so",
     "pricing": "freemium",
